--- a/app/views/pages/userClan.ejs
+++ b/app/views/pages/userClan.ejs
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>User's Clans</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="/user_clan/style.css">
 </head>
 
 <body>
@@ -14,8 +14,10 @@
 
 <div id="clanList"><b>Clans: </b></div>
 <div id="clanInfo"></div>	
-
-<script src="script.js"></script>
+<script>
+    let steamID = '<%= steamid  %>';
+</script>
+<script src="/user_clan/script.js"></script>
 
 </body>
 </html>
