--- a/app/views/pages/chat.ejs
+++ b/app/views/pages/chat.ejs
@@ -7,45 +7,66 @@
 
 <body>
     <h1 id="clan"></h1>
-    <div id="playNow">
-        <table>
-            <tr>
-                <td id="1"> P1 </td>
-                <td id="2"> P2 </td>
-                <td id="3"> P3 </td>
-                <td id="4"> P4 </td>
-                <td id="5"> P5 </td>
-            </tr>
-        </table>
-        <button id="play"> Play Now? </button>
-        <div id="players">
+    <table>
+        <tr>
+            <td>
+                <p id="clanName"> </p>
+                <p id="clanId"> </p>
+                <p id="clanDescription"> </p>
+                <p id="ifPublic"> </p>
+            
+            
+                <table id = "members">
+                    <thead>
+                        <tr><th>Clan Members</th></tr>
+                    </thead>
+                    <tbody id="clanMembers"></tbody>
+                </table>
+            </td>
 
-        </div>
-    </div>
-    <p id="clanName"> </p>
-    <p id="clanId"> </p>
-    <p id="clanDescription"> </p>
-    <p id="ifPublic"> </p>
+            <td>
+                <div id="messages" ></div>
+                <br>
+                <input type="text" id="chat">
+                <button id="submit"> Send </button>
+            </td>
 
+            <td>
+                <div id="playNow">
+                <table>
+                    <tr> <td id="1"> P1 </td> </tr>
+                    <tr> <td id="2"> P2 </td> </tr>
+                    <tr> <td id="3"> P3 </td> </tr>
+                    <tr> <td id="4"> P4 </td> </tr>
+                    <tr> <td id="5"> P5 </td> </tr>
+                </table>
+                <button id="play"> Play Now? </button>
+                <div id="players">
+        
+                </div>
+            </div>
+            </td>
 
-    <table id = "members">
-        <thead>
-            <tr><th>Clan Members</th></tr>
-        </thead>
-        <tbody id="clanMembers"></tbody>
+        </tr>
+        <tr>
+
+        </tr>
+        <tr>
+            
+        </tr>
     </table>
+    
+
 
     <br>
     <br>
 
-    <div id="messages" ></div>
-    <br>
-    <input type="text" id="chat">
-    <button id="submit"> Send </button>
+
 
     <script>
         let clan_id = '<%= clanid  %>';
         let username = '<%= user  %>';
+        let user_id = '<%= id %>';
     </script>
     <script src="/clan_pages/script.js"></script>
     <script src="/socket.io/socket.io.js"></script>
